<resources>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="app_name" translatable="false"> MovingFast</string>
    <string name="edit_text_email" translatable="false">E-Mail</string>
    <string name="login_text">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user_text">New user?</string>
    <string name="save_credentials">Save email and password</string>
    <string name="wrong_login_email">Insert the correct email</string>
    <string name="wrong_login_password">Insert the correct password</string>
    <string name="edit_text_name">Name</string>
    <string name="edit_text_surname">Surname</string>
    <string name="email_input_error">Insert a correct email</string>
    <string name="name_input_error">Insert valid name</string>
    <string name="surname_input_error">Insert valid surname</string>
    <string name="password_input_error">Insert valid password</string>
    <string name="no_connection_title">Network error</string>
    <string name="no_connection_message">Is not possible to login without an internet connection.</string>
    <string name="welcome">Welcome in MovingFast</string>
    <string name="not_valid_email_address">Insert a valid email address</string>
    <string name="not_valid_password">Password too weak</string>
    <string name="no_server_response">The server is not responding. Try later</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_rent">Rent scooter</string>
    <string name="menu_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_already_used">This email is already used</string>
    <string name="search_scooter"> Search scooter </string>
    <string name="wallet">Wallet</string>
    <string name="title_locationPermission_alert_dialog">Locations permission are needed</string>
    <string name="message_locationPermission_alert_dialog">To correctly use the app, you should grant location permissions</string>
    <string name="grant_button_locationPermission_alert_dialog">Grant</string>
    <string name="deny_button_locationPermission_alert_dialog">Deny</string>
    <string name="title_deviceLocation_aler_dialog">Device location is off</string>
    <string name="message_deviceLocation_alert_dialog">The device location is needed to use the application correctly. Go to settings to turn it on</string>
    <string name="openSettings_button_deviceLocation_alert_dialog">Settings</string>
    <string name="deny_button_deviceLocation_alert_dialog">No</string>
    <string name="device_position_retrieved_message">Device position retrieved</string>
    <string name="device_position_NOT_retrieved_message">Device position NOT retrieved. Check your location settings</string>
    <string name="loading_scooter_message">Loading near scooters</string>
    <string name="completed">Completed</string>
    <string name="title_marker_map">Scooter</string>
    <string name="snippet_marker_map">Battery level</string>
    <string name="no_scooter_message">No scooter avaible here</string>
    <string name="snackbar_action">RETRY</string>
    <string name="maintenance_warning">This scooter may need maintenance</string>
    <string name="first_name">Surname</string>
    <string name="second_name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="past_rentals">Past rentals</string>
    <string name="discount">Discount</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="not_valid_name">Insert a valid name</string>
    <string name="not_valid_surname">Insert a valid surname</string>
    <string name="departure"> Departure: </string>
    <string name="arrival"> Arrival: </string>
    <string name="title_bottomsheet">Information about selected scooter</string>
    <string name="address_textview">Address</string>
    <string name="batterylevel_textview">Battery</string>
    <string name="button_sheet">Directions</string>
    <string name="unlock_button">Unlock</string>
    <string name="connection_disabled">Your internet connection is disabled, please activate it to continue</string>
    <string name="noNfc_title">NFC not supported</string>
    <string name="noNfc_message">This device does not have NFC chip. Impossibile to rent a scooter</string>
    <string name="nfcIsOff_title">NFC is off</string>
    <string name="nfcIsOff_message">Turn on NFC from settings</string>
    <string name="settingsButton">Open Settings</string>
    <string name="androidBeamIsOff_title">Android Beam function is off</string>
    <string name="androidBeamIsOff_message"> Turn on Android Beam from settings</string>
    <string name="map_title">Map</string>
    <string name="rent_title">Rent a scooter</string>
    <string name="loading_connection_title">Connecting</string>
    <string name="loading_connection_msg">Contanting the server. Plese wait</string>
    <string name="rent_ok">Rent successfully completed</string>
    <string name="rent_error_title">Rent failed</string>
    <string name="rent_error">Ops! Something went wrong while renting the scooter</string>
    <string name="retry_rent">Retry</string>
    <string name="rent_instructions">"Please bring your smartphone next to the scooter and then press the screen when is prompted "</string>
    <string name="reportButton">Report a problem</string>
    <string name="closeRentButton">Close Rent</string>
    <string name="GMapButton">Open Google Maps</string>
    <string name="ridingTime">Riding time</string>
    <string name="traveledDistance">Traveled Distance (KM)</string>
    <string name="titleTotalDuration">Time spent on scooters:</string>
    <string name="titleStartHour">Start hour:</string>
    <string name="titleEndhour">End hour:</string>
    <string name="edit_text_password" translatable="false">Password</string>
    <string name="titleRentals">Your past rentals</string>
    <string name="titleNumRentals">Total rentals:</string>
    <string name="titleDuration">Duration:</string>
    <string name="titleAmount">Amount:</string>
    <string name="titleDeparture">Departure</string>
    <string name="titleArrival">Arrival</string>
    <string name="travel">This has been your journey</string>
    <string name="detailJourney">See more details</string>
    <string name="settings_title">Settings</string>
    <string name="menu_logout" translatable="false">Logout</string>
    <string name="logout_title" translatable="false">Logout</string>
    <string name="logout_messageDialog">Are you sure you to want to logout?</string>
    <string name="title_activity_maps_past_rentals" translatable="false">Map</string>
    <string name="titleBalance">Balance</string>
    <string name="titlePromotion">Promotions</string>
    <string name="add_promotional_code">You might have a discount for your next rental </string>
    <string name="add">Displays</string>
    <string name="wallet_value">WALLET AMOUNT</string>
    <string name="pay_now">PAY NOW</string>
    <string name="loading_connection_msgWallet">Connection. Updating Wallet</string>
    <string name="discount_text">Discount for the next rental: </string>
    <string name="no_discount"> You don\'t have any discount. Rent as much as possible to get it! </string>
    <string name="wallet_recharge">"Recharge "</string>
    <string name="paying_paypal">You will be directed to the paypal screen for payment</string>
    <string name="amount_lessThanZero">Please insert a value greater than zero</string>
    <string name="success_transaction">Transaction successfully completed</string>
    <string name="failure_transaction">Error!! Transaction failure</string>
    <string name="add_to_amount">LOAD TO THE BALANCE</string>
    <string name="toast_password">The password must contain more than 5 characters, a lowercase and uppercase letter, a number and a special character @ $ *% ^ &amp; amp; + =</string>
    <string name="NoChipNFC_textview">Your device does not have NFC chip</string>
    <string name="loading_message">Loading...</string>
    <string name="networkConnectionError_tile">Connection error</string>
    <string name="networkConnectionError_message">Please check your internet connection. Then if still not working the server is down. Please reload</string>
    <string name="reloadButton">Reload</string>
    <string name="paymentCompleted_title">Payment completed</string>
    <string name="paymentCompleted_message">Payment completed successfully. Thanks for choosing us </string>
    <string name="closeButton">Close</string>
    <string name="lowBalance_title">Credit error</string>
    <string name="lowBalance_message">It looks like your wallet is a little empty. You need to reload at least: </string>
    <string name="chargeWallet_button">Charge Wallet</string>
    <string name="paymentError_title">Payment error</string>
    <string name="paymentError_message">Oops! Something went wrong. Please try again</string>
    <string name="menu_maintenance">Scooter maintenance</string>
    <string name="menu_recharge">Scooter recharge</string>
    <string name="recharge_unl_button">"Recharge"</string>
    <string name="titleUnloaded">Scooters with low battery</string>
    <string name="charged_scooter">The scooter has been recharged</string>
    <string name="not_charged_scooter">The scooter has not been recharged</string>
    <string name="totalRidingTime_textView">Total riding time</string>
    <string name="totalTraveledDistance_textView">Total traveled distance</string>
    <string name="totalPayment_textView">Total</string>
    <string name="paymentButton">Proceed to payment</string>
    <string name="hadProblem_textView">Had some troubles?</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="titleMaintenance">Scooters need maintenance</string>
    <string name="titleBrakes"> Brakes </string>
    <string name="titleWheels"> Wheels </string>
    <string name="titleHandlebars"> Handlebars </string>
    <string name="title_accelerator"> Accelerator</string>
    <string name="title_lock"> Lock</string>
    <string name="title_other"> Other</string>
    <string name="maintenance_confirm_button">Confirm maintenance</string>
    <string name="maintened_scooter">The scooter has been maintened</string>
    <string name="already_maintened_scooter">The scooter has been already maintened</string>
    <string name="no_description">No description</string>
    <string name="description">Write a description. (Optional)</string>
    <string name="report">Report</string>
    <string name="titleReportProblems">Report problems</string>
    <string name="menu_report">Report problems</string>
    <string name="id_scooter">Select scooter</string>
    <string name="reportCompleted_title">Report completed </string>
    <string name="reportCompleted_text">Report received successfully. Thanks for your help.</string>
    <string name="reportFailed_title">Report failed</string>
    <string name="reportFailed_text">Report not received. Please try again.</string>
    <string name="nfcBumpFailed">Bump failed. Try again.</string>
    <string name="nfcBumpNoDataReceived">No data received after bump.</string>
    <string name="reportingActvityName">Reporting</string>
    <string name="reportScooterIdError">Scooter ID not retrieved.</string>
</resources>