<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map"/>

        <item android:id="@+id/nav_rent"
            android:icon="@drawable/ic_scooter"
            android:title="@string/menu_rent"/>

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>

        <item android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/wallet"/>

    </group>

</menu>