<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_map_maint"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map"/>

        <item android:id="@+id/nav_maintenance"
            android:icon="@drawable/ic_maintenance"
            android:title="@string/menu_maintenance"/>

        <item android:id="@+id/nav_recharge"
            android:icon="@drawable/ic_recharge"
            android:title="@string/menu_recharge"/>

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>

    </group>

</menu>