<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <EditText
        android:layout_marginTop="@dimen/input_margin_top"
        android:background="@color/white"
        android:layout_gravity="center"
        android:elevation="@dimen/standard_elevation"
        android:hint="@string/edit_text_email"
        android:textColorHint="@color/secondaryTextColor"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_sign_up"
        android:textColor="@color/secondaryTextColor"/>

    <EditText
        android:layout_marginTop="@dimen/input_margin_top"
        android:background="@color/white"
        android:elevation="@dimen/standard_elevation"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:inputType="textPersonName"
        android:hint="@string/edit_text_name"
        android:textColorHint="@color/secondaryTextColor"
        android:ems="10"
        android:id="@+id/name_sign_up"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/secondaryTextColor"/>

    <EditText
        android:layout_marginTop="@dimen/input_margin_top"
        android:background="@color/white"
        android:elevation="@dimen/standard_elevation"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:inputType="textPersonName"
        android:hint="@string/edit_text_surname"
        android:textColorHint="@color/secondaryTextColor"
        android:ems="10"
        android:id="@+id/surname_sign_up"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/secondaryTextColor"/>

    <EditText
        android:layout_marginTop="@dimen/input_margin_top"
        android:background="@color/white"
        android:hint="@string/edit_text_password"
        android:textColorHint="@color/secondaryTextColor"
        android:elevation="@dimen/standard_elevation"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:inputType="textPassword"
        android:id="@+id/password_sign_up"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/secondaryTextColor"/>

    <Button
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/input_margin_top"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        android:text="@string/sign_up"
        android:elevation="@dimen/standard_elevation"
        android:background="@color/colorAccent"
        android:id="@+id/button_sign_up"
        android:layout_gravity="center_horizontal" />

</LinearLayout>