<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/bottom_sheet_maintainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/title_bottomsheet"
        android:textColor="@color/textPrimaryColor"
        android:textSize="18sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/dividerColor"> </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_scooter"></ImageView>

        <LinearLayout
            android:layout_width="272dp"
            android:layout_height="164dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address_textView_maintainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location"
                android:text="@string/address_textview"
                android:textColor="@color/textPrimaryColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/battery_textView_maintainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_battery"
                android:text="@string/batterylevel_textview"
                android:textColor="@color/textPrimaryColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:drawableStart="@drawable/ic_warning"
                android:text="@string/maintenance_warning"
                android:textColor="@color/textPrimaryColor"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/directionsButton_maintainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:elevation="@dimen/standard_elevation_button"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_directions"
            android:tint="@color/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/button_sheet"
            android:textColor="@color/background"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>